data/all_generated_tests/raw_wast_tests/loop_IncorrectConditionEvaluation_720.wast
;; 1. **Test Description**: A loop containing a `br_if` instruction that should conditionally break out based on a stack-supplied boolean value. Ensure the loop exits early if the condition is false.    - **Constraint**: Verifies the condition evaluation in `br_if` accurately decides whether to break the loop.    - **Differential Behavior**: The loop continues to run in one engine despite the condition being false.

(assert_invalid
  (module
    (func $br_if_condition (result i32)
      (local i32)
      (i32.const 0)
      (local.set 0)
      (loop (result i32)
        (local.get 0)
        (br_if 1))
      (i32.const 1))
  )
  "type mismatch"
)